final update ui

--- a/settings.html
+++ b/settings.html
@@ -135,22 +135,31 @@
 
             <li class="nav-item">
                 <a class="nav-link" href="index.html">
-                    <img src="./img/inbox.svg" alt="inbox" style="border-radius: 8px 8px 0px 0px;">
+                    <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M5.60236 1.2C5.51805 1.20013 5.43485 1.22047 5.3589 1.25952C5.28296 1.29857 5.21621 1.35533 5.1636 1.4256L1.73229 6H6.74988C6.89907 6 7.04215 6.06321 7.14764 6.17574C7.25313 6.28826 7.31239 6.44087 7.31239 6.6C7.31239 7.07739 7.49018 7.53523 7.80666 7.87279C8.12313 8.21036 8.55236 8.4 8.99992 8.4C9.44748 8.4 9.87672 8.21036 10.1932 7.87279C10.5097 7.53523 10.6875 7.07739 10.6875 6.6C10.6875 6.44087 10.7467 6.28826 10.8522 6.17574C10.9577 6.06321 11.1008 6 11.25 6H16.2676L12.8362 1.4256C12.7836 1.35533 12.7169 1.29857 12.6409 1.25952C12.565 1.22047 12.4818 1.20013 12.3975 1.2H5.60236ZM16.8008 7.2H11.7562C11.6271 7.87817 11.2822 8.48789 10.7799 8.92583C10.2775 9.36377 9.6487 9.60301 8.99992 9.60301C8.35115 9.60301 7.72232 9.36377 7.22 8.92583C6.71767 8.48789 6.37273 7.87817 6.24362 7.2H1.19903L1.55903 10.2744C1.57606 10.4197 1.6423 10.5533 1.74529 10.6501C1.84827 10.747 1.9809 10.8003 2.11817 10.8H15.8817C16.0188 10.8 16.1511 10.7465 16.2539 10.6497C16.3566 10.553 16.4227 10.4195 16.4397 10.2744L16.7997 7.2H16.8008ZM4.28496 0.6756C4.44314 0.464688 4.64378 0.294448 4.87203 0.177496C5.10027 0.060545 5.35027 -0.000119135 5.60349 1.75649e-07H12.3964C12.6496 -0.000119135 12.8996 0.060545 13.1278 0.177496C13.3561 0.294448 13.5567 0.464688 13.7149 0.6756L17.8775 6.2256C17.9242 6.28822 17.9588 6.36019 17.9791 6.43726C17.9993 6.51434 18.005 6.59497 17.9956 6.6744L17.5568 10.4232C17.5058 10.8587 17.3074 11.2593 16.9989 11.5496C16.6904 11.84 16.2931 12.0002 15.8817 12H2.11817C1.70674 12.0002 1.30942 11.84 1.00093 11.5496C0.692439 11.2593 0.494031 10.8587 0.443013 10.4232L0.00425493 6.6744C-0.00496603 6.59489 0.00083534 6.51421 0.0213168 6.43713C0.0417983 6.36005 0.076545 6.28813 0.123507 6.2256L4.28609 0.6756H4.28496Z" fill="#4D4D4D"/>
+                        </svg>
                     <span style="color: #858796;" id="sidebarlink">Inbox</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="archives.html">
-                    <img src="./img/archive.svg" alt="archive">
+                    <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 1.14286C0 0.839753 0.118526 0.549062 0.329505 0.334735C0.540483 0.120408 0.826631 0 1.125 0H16.875C17.1734 0 17.4595 0.120408 17.6705 0.334735C17.8815 0.549062 18 0.839753 18 1.14286V3.42857C18 3.73168 17.8815 4.02237 17.6705 4.23669C17.4595 4.45102 17.1734 4.57143 16.875 4.57143V13.1429C16.875 13.9006 16.5787 14.6273 16.0512 15.1632C15.5238 15.699 14.8084 16 14.0625 16H3.9375C3.19158 16 2.47621 15.699 1.94876 15.1632C1.42132 14.6273 1.125 13.9006 1.125 13.1429V4.57143C0.826631 4.57143 0.540483 4.45102 0.329505 4.23669C0.118526 4.02237 0 3.73168 0 3.42857V1.14286ZM2.25 4.57143V13.1429C2.25 13.5975 2.42779 14.0336 2.74426 14.355C3.06072 14.6765 3.48995 14.8571 3.9375 14.8571H14.0625C14.5101 14.8571 14.9393 14.6765 15.2557 14.355C15.5722 14.0336 15.75 13.5975 15.75 13.1429V4.57143H2.25ZM16.875 1.14286H1.125V3.42857H16.875V1.14286ZM5.625 7.42857C5.625 7.27702 5.68426 7.13167 5.78975 7.02451C5.89524 6.91735 6.03832 6.85714 6.1875 6.85714H11.8125C11.9617 6.85714 12.1048 6.91735 12.2102 7.02451C12.3157 7.13167 12.375 7.27702 12.375 7.42857C12.375 7.58012 12.3157 7.72547 12.2102 7.83263C12.1048 7.9398 11.9617 8 11.8125 8H6.1875C6.03832 8 5.89524 7.9398 5.78975 7.83263C5.68426 7.72547 5.625 7.58012 5.625 7.42857Z" fill="#4D4D4D"/>
+                        </svg>
                     <span style="color: #858796;" id="sidebarlink">Archives</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="meetings.html">
-                    <img src="./img/video.svg" alt="video">
+                    <svg width="18" height="12" viewBox="0 0 18 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd" clip-rule="evenodd" d="M0 2.4C0 1.76348 0.237053 1.15303 0.65901 0.702944C1.08097 0.252856 1.65326 1.66215e-08 2.25 1.66215e-08H10.6875C11.2332 -6.84576e-05 11.7604 0.211431 12.1708 0.595113C12.5812 0.978795 12.8469 1.50851 12.9184 2.0856L16.4171 0.4272C16.5884 0.345806 16.776 0.311356 16.9629 0.326983C17.1498 0.342609 17.3301 0.407815 17.4874 0.516675C17.6447 0.625535 17.7739 0.774596 17.8635 0.950309C17.953 1.12602 17.9999 1.32281 18 1.5228V10.4772C17.9998 10.677 17.9529 10.8737 17.8634 11.0492C17.774 11.2248 17.6448 11.3738 17.4877 11.4826C17.3306 11.5914 17.1505 11.6567 16.9637 11.6724C16.7769 11.6882 16.5895 11.6539 16.4182 11.5728L12.9184 9.9144C12.8469 10.4915 12.5812 11.0212 12.1708 11.4049C11.7604 11.7886 11.2332 12.0001 10.6875 12H2.25C1.65326 12 1.08097 11.7471 0.65901 11.2971C0.237053 10.847 0 10.2365 0 9.6V2.4ZM12.9375 8.61L16.875 10.4772V1.5228L12.9375 3.39V8.61ZM2.25 1.2C1.95163 1.2 1.66548 1.32643 1.4545 1.55147C1.24353 1.77652 1.125 2.08174 1.125 2.4V9.6C1.125 9.91826 1.24353 10.2235 1.4545 10.4485C1.66548 10.6736 1.95163 10.8 2.25 10.8H10.6875C10.9859 10.8 11.272 10.6736 11.483 10.4485C11.694 10.2235 11.8125 9.91826 11.8125 9.6V2.4C11.8125 2.08174 11.694 1.77652 11.483 1.55147C11.272 1.32643 10.9859 1.2 10.6875 1.2H2.25Z" fill="#4D4D4D"/>
+                        </svg>
                     <span style="color: #858796;" id="sidebarlink">Meetings</span></a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link" href="settings.html">
-                    <img src="./img/settings-active.svg" alt="settings-active" style="border-radius: 20px;">
+                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M10.5806 1.18125C10.116 -0.39375 7.884 -0.39375 7.41937 1.18125L7.30687 1.56375C7.23745 1.79954 7.11613 2.01681 6.95182 2.19961C6.7875 2.38242 6.58434 2.52613 6.35726 2.6202C6.13017 2.71427 5.88491 2.75632 5.63945 2.74326C5.394 2.73021 5.15458 2.66238 4.93875 2.54475L4.59 2.3535C3.14663 1.56825 1.56825 3.14663 2.35462 4.58887L2.54475 4.93875C3.0465 5.86125 2.57063 7.00987 1.56375 7.30687L1.18125 7.41937C-0.39375 7.884 -0.39375 10.116 1.18125 10.5806L1.56375 10.6931C1.79954 10.7625 2.01681 10.8839 2.19961 11.0482C2.38242 11.2125 2.52613 11.4157 2.6202 11.6427C2.71427 11.8698 2.75632 12.1151 2.74326 12.3605C2.73021 12.606 2.66238 12.8454 2.54475 13.0612L2.3535 13.41C1.56825 14.8534 3.14663 16.4317 4.58887 15.6454L4.93875 15.4552C5.15458 15.3376 5.394 15.2698 5.63945 15.2567C5.88491 15.2437 6.13017 15.2857 6.35726 15.3798C6.58434 15.4739 6.7875 15.6176 6.95182 15.8004C7.11613 15.9832 7.23745 16.2005 7.30687 16.4362L7.41937 16.8188C7.884 18.3937 10.116 18.3937 10.5806 16.8188L10.6931 16.4362C10.7625 16.2005 10.8839 15.9832 11.0482 15.8004C11.2125 15.6176 11.4157 15.4739 11.6427 15.3798C11.8698 15.2857 12.1151 15.2437 12.3605 15.2567C12.606 15.2698 12.8454 15.3376 13.0612 15.4552L13.41 15.6465C14.8534 16.4317 16.4317 14.8534 15.6454 13.4111L15.4552 13.0612C15.3376 12.8454 15.2698 12.606 15.2567 12.3605C15.2437 12.1151 15.2857 11.8698 15.3798 11.6427C15.4739 11.4157 15.6176 11.2125 15.8004 11.0482C15.9832 10.8839 16.2005 10.7625 16.4362 10.6931L16.8188 10.5806C18.3937 10.116 18.3937 7.884 16.8188 7.41937L16.4362 7.30687C16.2005 7.23745 15.9832 7.11613 15.8004 6.95182C15.6176 6.7875 15.4739 6.58434 15.3798 6.35726C15.2857 6.13017 15.2437 5.88491 15.2567 5.63945C15.2698 5.394 15.3376 5.15458 15.4552 4.93875L15.6465 4.59C16.4317 3.14663 14.8534 1.56825 13.4111 2.35462L13.0612 2.54475C12.8454 2.66238 12.606 2.73021 12.3605 2.74326C12.1151 2.75632 11.8698 2.71427 11.6427 2.6202C11.4157 2.52613 11.2125 2.38242 11.0482 2.19961C10.8839 2.01681 10.7625 1.79954 10.6931 1.56375L10.5806 1.18125ZM9 12.2963C8.12578 12.2963 7.28737 11.949 6.6692 11.3308C6.05103 10.7126 5.70375 9.87422 5.70375 9C5.70375 8.12578 6.05103 7.28737 6.6692 6.6692C7.28737 6.05103 8.12578 5.70375 9 5.70375C9.87392 5.70375 10.712 6.05091 11.33 6.66887C11.948 7.28683 12.2951 8.12495 12.2951 8.99887C12.2951 9.8728 11.948 10.7109 11.33 11.3289C10.712 11.9468 9.87392 12.294 9 12.294V12.2963Z" fill="#0254D7"/>
+                        </svg>
+
                     <span id="sidebarlink">Settings</span></a>
             </li>
 
@@ -260,11 +269,12 @@
                                             <span id="response-color-change">Canned Response</span>
                                         </a>
                                     </li>
-                                    <li class="setting-item">
+                                    <li class="setting-item" onclick="myFunctionGeneralSetting()">
 
                                         <a class="setting-link">
-                                            <img src="./img/g-settingicon.svg" type="image">
-                                            <span>General Settings</span>
+                                            <img id="gsetting-grey-icon" src="./img/g-settingicon.svg" type="image">
+                                            <img id="gsetting-blue-icon" src="./img/g-setting-icon-active.svg" type="image">
+                                            <span id="g-setting-color-change">General Settings</span>
                                         </a>
                                     </li>
 
@@ -286,14 +296,12 @@
                                 <div class="container-fluid">
                                     <div class="row">
                                         <div class="col-md first-ele">
-                                            <img class="profile-pic" src="./img/profile-image.svg">
-
-                                            <div class="image-upload-section">
-                                                <img src="./img/upload-img.png" class="upload-button">
-
-                                                <input class="file-upload" type="file" accept="image/*" />
-
+                                            <div class="user-image-section">
+                                                <img class="profile-pic" src="./img/setting-profile-image.svg">
                                             </div>
+
+
+
                                             <h6>Williams</h6>
                                             <p>Status: <span class="status">Online</span></p>
                                         </div>
@@ -350,7 +358,7 @@
                                                 </div>
 
                                             </div>
-                                            <button class="saveChangesBtn">Save Changes</button>
+
 
                                         </div>
 
@@ -568,7 +576,7 @@
                                 <div class="row">
                                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 live-chat-canned-response-popup">
                                         <button class="open-button" id="myBtn">Add New</button>
-                                        <button class="delete-button">Delete</button>
+                                        <button class="delete-button" id="deleteBtn">Delete</button>
 
 
                                         <div class="search-container">
@@ -600,7 +608,7 @@
                                         <tr role="row">
                                             <td role="cell">
                                                 <label class="cam">
-                                                    <input type="checkbox">
+                                                    <input type="checkbox" class="response-checkbox"  onclick="deleteCannedResponseFunction()">
                                                     <span class="checkmark"></span>
                                                   </label> printing
 
@@ -618,7 +626,7 @@
 
                                             <td role="cell">
                                                 <label class="cam">
-                                                    <input type="checkbox" >
+                                                    <input type="checkbox" class="response-checkbox"  onclick="deleteCannedResponseFunction()">
                                                     <span class="checkmark"></span>
                                                   </label> fact
 
@@ -635,8 +643,8 @@
 
                                             <td role="cell">
                                                 <label class="cam">
-                                                    <input type="checkbox" >
-                                                    <span class="checkmark"></span>
+                                                    <input type="checkbox" class="response-checkbox"  onclick="deleteCannedResponseFunction()">
+                                                    <span class="checkmark" ></span>
                                                   </label> content
 
                                             </td>
@@ -652,7 +660,7 @@
 
                                             <td role="cell">
                                                 <label class="cam">
-                                                    <input type="checkbox" >
+                                                    <input type="checkbox" class="response-checkbox"  onclick="deleteCannedResponseFunction()">
                                                     <span class="checkmark"></span>
                                                   </label> readable
 
@@ -669,7 +677,7 @@
 
                                             <td role="cell">
                                                 <label class="cam">
-                                                    <input type="checkbox" >
+                                                    <input type="checkbox" class="response-checkbox"  onclick="deleteCannedResponseFunction()">
                                                     <span class="checkmark"></span>
                                                   </label> content
 
@@ -682,23 +690,7 @@
                                             </td>
 
                                         </tr>
-                                        <!-- <tr role="row">
 
-                                            <td role="cell">
-                                                <label class="cam">
-                                                    <input type="checkbox" >
-                                                    <span class="checkmark"></span>
-                                                  </label> content
-
-                                            </td>
-                                            <td role="cell">model </td>
-                                            <td role="cell">Public</td>
-                                            <td class="show-on-hover" role="cell">
-                                                <img style="padding-right: 15px;" src="./img/table-edit.svg">
-                                                <img src="./img/table-delete.svg">
-                                            </td>
-
-                                        </tr> -->
 
 
                                     </tbody>
@@ -720,6 +712,45 @@
 
 
                                 </div>
+
+
+
+                            </div>
+
+                        </div>
+                        <div class="col-xl-10 col-lg-10 col-md-12 col-sm-12 col-12 py-2 " id="live-chat-setting-content-gs" style="height: calc(100vh - 4.375rem); background: #FAFAFA;">
+
+                            <div class="live-chat-general-setting-heading ">
+                                <img src="./img/mobile-back.svg" class="back-arrow-div" id="live-chat-active-customers-opener-setting" onclick="myFunctionArrow()">
+                                <img src="./img/general-setting-icon.svg" type="image">
+                                <span>General Settings</span>
+
+                            </div>
+                            <div class="live-chat-general-setting-area">
+
+
+
+
+
+                                <div class="container-fluid">
+                                    <div class="col-xl-6 col-lg-16 col-md-6 col-sm-6 col-6 text-content">
+                                        Enable desktop notifications
+                                    </div>
+
+                                    <div class="col-xl-6 col-lg-16 col-md-6 col-sm-6 col-6 checkbox-content">
+
+                                        <input type="checkbox" checked>
+                                        <button class="saveChangesBtn">Save Changes</button>
+                                    </div>
+
+
+                                </div>
+
+
+
+
+
+
 
 
 
@@ -788,6 +819,23 @@
 
     <script src="js/script.js"></script>
     <script src="js/setting.js"></script>
+    <script>
+        function deleteCannedResponseFunction() {
+            var responsecheckBox = document.querySelector(".response-checkbox");
+            var addResponse = document.getElementById("myBtn");
+            var deleteResponse = document.getElementById("deleteBtn");
+            if (responsecheckBox.checked == true) {
+
+                deleteResponse.style.display = "inline-block";
+                addResponse.style.display = "none";
+
+            } else {
+                deleteResponse.style.display = "none";
+                addResponse.style.display = "inline-block";
+            }
+
+        }
+    </script>
 
 </body>
 
