final ui frontend

--- a/settings.html
+++ b/settings.html
@@ -309,34 +309,34 @@
 
                                             <div class="row">
                                                 <div class="col-xl profile-width">
-                                                    <p>First Name</p>
-                                                    <span><img src="./img/pen-icon.png"></span>
+                                                    <p>First Name</p><br>
 
-                                                    <input type="text" placeholder="Shubham"><br>
+
+                                                    <b>Shubham</b><br>
+                                                </div><br>
+                                                <div class="col-xl profile-width">
+                                                    <p>Last Name</p><br>
+
+                                                    <b>Sethia</b><br>
                                                 </div>
                                                 <div class="col-xl profile-width">
-                                                    <p>Last Name</p>
-                                                    <span><img src="./img/pen-icon.png"></span>
-                                                    <input type="text" placeholder="Sethia"><br>
-                                                </div>
-                                                <div class="col-xl profile-width">
-                                                    <p>Mobile</p>
-                                                    <span><img src="./img/pen-icon.png"></span>
-                                                    <input type="text" placeholder="(+91) 877-589-5213"><br>
+                                                    <p>Mobile</p><br>
+
+                                                    <b>9997518454</b><br>
                                                 </div>
                                             </div>
                                             <div class="row">
                                                 <div class="col-xl content-left profile-width">
                                                     <p>Email ID</p><br>
-                                                    <b>shubham.sethia@allincall.in</b><br><br>
+                                                    <b>shubham.sethia@allincall.in</b><br>
                                                 </div>
                                                 <div class="col-xl content-left profile-width">
                                                     <p>Designation</p><br>
-                                                    <b>Lorem Ipsum</b><br><br>
+                                                    <b>Lorem Ipsum</b><br>
                                                 </div>
                                                 <div class="col-xl content-left profile-width">
                                                     <p>Category</p><br>
-                                                    <b>Education Loan</b><br><br>
+                                                    <b>Education Loan</b><br>
 
                                                 </div>
                                             </div>
@@ -344,7 +344,7 @@
                                                 <div class="col-xl content-left profile-width">
                                                     <p>Supervisor</p><br>
 
-                                                    <b>Lorem Ipsum</b><br><br>
+                                                    <b>Lorem Ipsum</b><br>
 
                                                 </div>
                                                 <div class="col-xl content-left profile-width">
