--- a/settings.html
+++ b/settings.html
@@ -307,7 +307,7 @@
                                         </div>
                                         <div class="col-md second-ele">
 
-                                            <div class="row">
+                                            <div class="row" style="margin-bottom: 30px;">
                                                 <div class="col-xl profile-width">
                                                     <p>First Name</p><br>
 
@@ -325,7 +325,7 @@
                                                     <b>9997518454</b><br>
                                                 </div>
                                             </div>
-                                            <div class="row">
+                                            <div class="row" style="margin-bottom: 30px;">
                                                 <div class="col-xl content-left profile-width">
                                                     <p>Email ID</p><br>
                                                     <b>shubham.sethia@allincall.in</b><br>
