--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
 
         <!-- Agent Offline Reason Popup Model -->
-        <div class="agent-offline-status-model" id="offlineReasonModal">
+        <div class="modal fade show agent-offline-status-model" id="offlineReasonModal">
 
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12 form-popup">
                 <form action="#" class="form-container">
