inbox input change

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                                 </div>
                                 <div class="live-chat-text-box-wrapper">
                                     <div class="live-chat-text-box" role="text-area">
-                                        <textarea class="live-chat-text-area" placeholder="Shift + Enter to add a new line; Start with '/' to select a Canned Response
+                                        <textarea class="live-chat-text-area" placeholder="Start with '/' to select a Canned Response
                                         " autofocus></textarea>
                                     </div>
 
