--- a/admin_settings.html
+++ b/admin_settings.html
@@ -520,7 +520,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                     </ul>
 
@@ -673,7 +673,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                     </ul>
 
@@ -825,7 +825,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -956,7 +956,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
                                     </ul>
                                 </div>
                             </div>
