--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                                     <div class="live-chat-client-message-wrapper">
                                         <div class="live-chat-client-image">S</div>
                                         <div class="live-chat-client-message-bubble">
-                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur.
+                                            kuygyugyugyghhhhhhhhhhhhhhhhhhhhhhhhhbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbgggggggggggggggggggggggggggggggggggggggfffffffffffffffffffffffffffffffffffffffffffffffffffff
                                         </div>
                                         <div class="live-chat-client-message-time">4:30 PM</div>
                                     </div>
@@ -290,17 +290,38 @@
                                             <img src="img/blue-ticks.svg" alt="Blue ticks"></img>
                                         </div>
                                     </div>
+                                    <div class="live-chat-agent-message-wrapper">
+                                        <div class="live-chat-agent-image">A</div>
+                                        <div class="live-chat-agent-message-bubble" style="padding: 10px 0px 0px 0px; text-align: center; border: 1px solid var(--border-color-primary); background-color: #ffffff;">
+                                            <img src="./img/image-attachement.svg">
+                                            <div class="file-attach-name-area">
+                                                <span id="custom-text-attach-img">No file chosen</span>
+
+                                            </div>
+
+                                        </div>
+                                        <div class="live-chat-agent-message-time">
+                                            4:30 PM
+                                            <img src="img/blue-ticks.svg" alt="Blue ticks"></img>
+                                        </div>
+                                    </div>
                                     <div class="live-chat-client-message-wrapper">
                                         <div class="live-chat-client-image">S</div>
                                         <div class="live-chat-client-message-bubble">
+
                                             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur.
+
+
+
+
                                         </div>
                                         <div class="live-chat-client-message-time">4:30 PM</div>
                                     </div>
                                     <div class="live-chat-client-message-wrapper">
                                         <div class="live-chat-client-image">S</div>
                                         <div class="live-chat-client-message-bubble">
-                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur.
+                                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur. Lorem ipsum dolor,
+                                            sit amet consectetur adipisicing elit. Fugiat, consequatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Fugiat, consequatur.
                                         </div>
                                         <div class="live-chat-client-message-time">4:30 PM</div>
                                     </div>
@@ -316,9 +337,9 @@
 
                                         <div class="live-chat-text-format-icon-wrapper attachment tooltip-textarea">
                                             <input type="file" id="real-file-attach" hidden="hidden" />
-                                            <!-- <button type="button" id="custom-button-attach">Choose File</button> -->
+
                                             <img src="./img/attachment.svg" alt="Attachment" class="live-chat-text-format-icon" id="custom-button-attach">
-                                            <!-- <span id="custom-text-attach">No file chosen</span> -->
+
 
 
                                             <span class="tooltiptext">Attach File</span>
