--- a/manage-users.html
+++ b/manage-users.html
@@ -365,7 +365,7 @@
                                         <ul class="pagination-content">
                                             <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                             <li><a href="#">2</a></li>
-                                            <li><a href="#">3</a></li>
+                                            <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                         </ul>
 
