--- a/reports.html
+++ b/reports.html
@@ -318,7 +318,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                     </ul>
 
@@ -466,7 +466,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                     </ul>
 
@@ -601,7 +601,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                     </ul>
 
@@ -750,7 +750,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                     </ul>
 
@@ -914,7 +914,7 @@
                                     <ul class="pagination-content">
                                         <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                         <li><a href="#">2</a></li>
-                                        <li><a href="#">3</a></li>
+                                        <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                     </ul>
 
