--- a/settings.html
+++ b/settings.html
@@ -434,17 +434,7 @@
                                             <td role="cell">17/12/20</td>
 
                                         </tr>
-                                        <!-- <tr role="row">
-                                            <td role="cell">16/12/20</td>
-                                            <td role="cell">Wednesday</td>
-                                            <td role="cell">11 AM</td>
-                                            <td role="cell">3:00 PM</td>
-                                            <td role="cell">Shubham.Sethia</td>
-                                            <td role="cell">16/12/20</td>
-                                            <td role="cell">Shubham.Sethia</td>
-                                            <td role="cell">17/12/20</td>
 
-                                        </tr> -->
 
                                     </tbody>
                                 </table>
@@ -456,7 +446,7 @@
                                         <ul class="pagination-content">
                                             <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                             <li><a href="#">2</a></li>
-                                            <li><a href="#">3</a></li>
+                                            <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                         </ul>
 
@@ -610,7 +600,7 @@
                                         <ul class="pagination-content">
                                             <li class="active-page"><a style="color: #0254D7;" href="#">1</a></li>
                                             <li><a href="#">2</a></li>
-                                            <li><a href="#">3</a></li>
+                                            <li style="border-radius: 0px 6px 6px 0px;"><a href="#">3</a></li>
 
                                         </ul>
 
