--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                     <div class="live-chat-agent-message-wrapper">
                                         <div class="live-chat-agent-image">A</div>
                                         <div class="live-chat-agent-message-bubble file-attachement-download">
-                                            <div style="    width: 50px; height: 45px; display: inline-block;"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <div style="    width: 50px; display: inline-block;"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M31.6312 2.71948L38.934 10.332V39.2805H11.6537V39.375H39.0272V10.4278L31.6312 2.71948Z" fill="#909090"/>
                                                 <path d="M31.5406 2.625H11.5604V39.2805H38.9339V10.3333L31.5393 2.625" fill="#F4F4F4"/>
                                                 <path d="M11.3596 4.59375H2.97272V13.5542H29.354V4.59375H11.3596Z" fill="#7A7B7C"/>
@@ -274,11 +274,11 @@
                                                 <path d="M22.7758 5.85507H19.5864V12.1551H20.9356V9.65607H22.6419V8.48532H20.9356V7.02582H22.7731V5.85507" fill="white"/>
                                                 </svg></div>
 
-                                            <div style="width: 120px; height: 50px; display: inline-block;"><span id="custom-text-attach">No file chosen</span><br>
+                                            <div style="width: 120px; display: inline-block;"><span id="custom-text-attach">No file chosen</span><br>
                                                 <b id="click-to-view-text-attachment">Click to view</b></div>
 
 
-                                            <div style="width: 30px;cursor: pointer; height: 35px; display: inline-block;"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <div style="width: 30px;cursor: pointer;  display: inline-block;"><svg width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M13 0C20.15 0 26 5.85 26 13C26 20.15 20.15 26 13 26C5.85 26 0 20.15 0 13C0 5.85 5.85 0 13 0ZM7.8 19.5H18.2V16.9H7.8V19.5ZM18.2 10.4H14.95V5.2H11.05V10.4H7.8L13 15.6L18.2 10.4Z" fill="#909090"/>
                                                 </svg></div>
 
