--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
                                     <div class="live-chat-agent-message-wrapper">
                                         <div class="live-chat-agent-image">A</div>
                                         <div class="live-chat-agent-message-bubble file-attachement-download">
-                                            <div style="    width: 50px; display: inline-block;"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                            <div style="    width: 50px;  display: inline-block;"><svg width="42" height="42" viewBox="0 0 42 42" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                 <path d="M31.6312 2.71948L38.934 10.332V39.2805H11.6537V39.375H39.0272V10.4278L31.6312 2.71948Z" fill="#909090"/>
                                                 <path d="M31.5406 2.625H11.5604V39.2805H38.9339V10.3333L31.5393 2.625" fill="#F4F4F4"/>
                                                 <path d="M11.3596 4.59375H2.97272V13.5542H29.354V4.59375H11.3596Z" fill="#7A7B7C"/>
@@ -292,7 +292,7 @@
                                     </div>
                                     <div class="live-chat-agent-message-wrapper">
                                         <div class="live-chat-agent-image">A</div>
-                                        <div class="live-chat-agent-message-bubble" style="padding: 10px 0px 0px 0px; text-align: center; border: 1px solid var(--border-color-primary); background-color: #ffffff;">
+                                        <div class="live-chat-agent-message-bubble-image-attachment">
                                             <img src="./img/image-attachement.svg">
                                             <div class="file-attach-name-area">
                                                 <span id="custom-text-attach-img">No file chosen</span>
