--- a/index.html
+++ b/index.html
@@ -305,6 +305,21 @@
                                             <img src="img/blue-ticks.svg" alt="Blue ticks"></img>
                                         </div>
                                     </div>
+                                    <div class="live-chat-agent-message-wrapper">
+                                        <div class="live-chat-agent-image">A</div>
+                                        <div class="live-chat-agent-message-bubble-image-attachment">
+                                            <img src="./img/video-attachment.svg">
+                                            <div class="file-attach-name-area">
+                                                <span id="custom-text-attach-img">No file chosen</span>
+
+                                            </div>
+
+                                        </div>
+                                        <div class="live-chat-agent-message-time">
+                                            4:30 PM
+                                            <img src="img/blue-ticks.svg" alt="Blue ticks"></img>
+                                        </div>
+                                    </div>
                                     <div class="live-chat-client-message-wrapper">
                                         <div class="live-chat-client-image">S</div>
                                         <div class="live-chat-client-message-bubble">
